--- a/app/Ranking/page.module.css
+++ b/app/Ranking/page.module.css
@@ -1,4 +1,4 @@
-/* Container for the entire page */
+1/* Container for the entire page */
 .container {
   display: flex;
   flex-direction: column;
