--- a/app/Vs/page.module.css
+++ b/app/Vs/page.module.css
@@ -1,32 +1,30 @@
+
 .trapezoid {
-    /* width: 200px;
-    height: 100px; */
-    /* background-color: #3498db; */
     clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);
     border-radius: 2rem;
-}
-
-.reverseTrapezoid {
+  }
+  
+  .reverseTrapezoid {
     clip-path: polygon(20% 0%, 100% 0%, 100% 100%, 0% 100%);
     border-radius: 2rem;
-}
-
-.background_trapezoid {
+  }
+  
+  .background_trapezoid {
     clip-path: polygon(0% 0%, 100% 0%, 77% 100%, 0% 100%);
     background-color: #FEDE7D;
     border-radius: 2rem;
     transition: transform 0.3s ease;
-    /* padding: 10px; */
-}
-
-.background_reverse_trapezoid {
+  }
+  
+  .background_reverse_trapezoid {
     clip-path: polygon(23% 0%, 100% 0%, 100% 100%, 0% 100%);
     background-color: #B5E1E7;
     border-radius: 2rem;
     transition: transform 0.3s ease;
-}
-
-.background_trapezoid:hover,
-.background_reverse_trapezoid:hover {
-  transform: scale(1.03); /* Make the div 5% larger */
-}
+  }
+  
+  .background_trapezoid:hover,
+  .background_reverse_trapezoid:hover {
+    transform: scale(1.03);
+  }
+  
