--- a/app/Vs/page.module.css
+++ b/app/Vs/page.module.css
@@ -1,30 +1,64 @@
-
 .trapezoid {
-    clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 0% 100%);
+  border-radius: 2rem;
+}
+
+.reverseTrapezoid {
+  clip-path: polygon(20% 0%, 100% 0%, 100% 100%, 0% 100%);
+  border-radius: 2rem;
+}
+
+.background_trapezoid {
+  clip-path: polygon(0% 0%, 100% 0%, 77% 100%, 0% 100%);
+  background-color: #fede7d;
+  border-radius: 2rem;
+  transition: transform 0.3s ease;
+}
+
+.background_reverse_trapezoid {
+  clip-path: polygon(23% 0%, 100% 0%, 100% 100%, 0% 100%);
+  background-color: #b5e1e7;
+  border-radius: 2rem;
+  transition: transform 0.3s ease;
+}
+
+.background_trapezoid:hover,
+.background_reverse_trapezoid:hover {
+  transform: scale(1.03);
+}
+
+@media (max-width: 768px) {
+  .trapezoid {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 73%);
     border-radius: 2rem;
   }
-  
+
   .reverseTrapezoid {
-    clip-path: polygon(20% 0%, 100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 27%, 100% 100%, 0% 100%);
     border-radius: 2rem;
   }
-  
+
   .background_trapezoid {
-    clip-path: polygon(0% 0%, 100% 0%, 77% 100%, 0% 100%);
-    background-color: #FEDE7D;
-    border-radius: 2rem;
-    transition: transform 0.3s ease;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+    width: 85vw;
   }
-  
+
   .background_reverse_trapezoid {
-    clip-path: polygon(23% 0%, 100% 0%, 100% 100%, 0% 100%);
-    background-color: #B5E1E7;
-    border-radius: 2rem;
-    transition: transform 0.3s ease;
+    clip-path: polygon(0% 0%, 100% 20%, 100% 100%, 0% 100%);
+    width: 85vw;
   }
-  
-  .background_trapezoid:hover,
-  .background_reverse_trapezoid:hover {
-    transform: scale(1.03);
+
+  .progress_bar {
+    height: 5vh;
+    width: 85vw;
   }
-  
+
+  .flag_bar {
+    width: 80vw;
+  }
+
+  .round_image {
+    width: 100px;
+    height: 100px;
+  }
+}
