--- a/app/Ranking/page.module.css
+++ b/app/Ranking/page.module.css
@@ -1,17 +1,15 @@
-/* General Container */
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: Arial, sans-serif;
   background-color: #FFF3DE;
   padding: 2rem;
   min-height: 100vh;
-  min-width: 100vw;
+  width: full;
+  font-family: "Poppins",
 }
 
-/* Heading */
 .heading {
   font-size: 2rem;
   font-weight: bold;
@@ -20,7 +18,6 @@
   text-align: center;
 }
 
-/* Ranking List */
 .rankingList {
   list-style: none;
   padding: 0;
@@ -45,7 +42,6 @@
   background-color: #f3f4f6;
 }
 
-/* Chat Toggle */
 .chatToggle {
   background-color: #fcca5d;
   color: white;
@@ -63,7 +59,6 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-/* Chat Window */
 .chatWindow {
   height: 40rem;
   width: 20rem;
@@ -140,7 +135,6 @@
   color: #6b7280;
 }
 
-/* Chat Input */
 .chatInput {
   padding: 1rem;
   border-top: 1px solid #e5e7eb;
@@ -171,17 +165,9 @@
   background-color: #fcca5d;
 }
 
-/* Podium */
 .podium {
   display: flex;
   align-items: flex-end;
-}
-
-.podium div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 10px;
 }
 
 .podium .rank-1 {
@@ -206,6 +192,13 @@
   color: white;
 }
 
+.podium div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 10px;
+}
+
 /* Medal */
 .medal {
   width: 2.5rem;
@@ -220,8 +213,7 @@
   word-wrap: break-word;
 }
 
-/* Media Queries */
-@media (max-width: 768px) {
+@media (max-width: 1600px) {
   .rank-1 {
     top: -30%;
     left: 20%;
@@ -233,3 +225,4 @@
     transform: translateX(-50%);
   }
 }
+
